--- a/ahorcado.ipynb
+++ b/ahorcado.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Desarrollo juego"
+    "2. Juego nuevo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def juego_nuevo():\n",
+    "    while True:\n",
+    "        decision = input(\"¿Quieres volver a jugar? Indica si o no\").lower()\n",
+    "        if decision == \"si\":\n",
+    "            return desarrollo_juego()\n",
+    "        elif decision == \"no\":\n",
+    "            print(\"¡Gracias por jugar!\")\n",
+    "            return\n",
+    "        else:\n",
+    "            print(\"Opción no válida. Por favor, escribe si o no\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Desarrollo juego"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +206,7 @@
     "        elif intentos == 1:\n",
     "            print(dibujo6)\n",
     "            print(\"Has perdido :(. Ya no te quedan más intentos.\")\n",
-    "            return # Salida si pierde\n",
+    "            return juego_nuevo() # Salida si pierde y posibilidad de seguir jugando\n",
     "\n",
     "        # Crear condición para avisar que se usó esa letra\n",
     "      elif letras_jugador2 not in palabra_jugador1 and letras_jugador2 in lista_errores:\n",
@@ -190,20 +215,20 @@
     "        # Crear condición independiente para avisar de que se acertó la palabra\n",
     "      if conversion_frase == \" \".join(palabra_jugador1):\n",
     "        print(\"ENHORABUENA! HAS GANADO :)\")\n",
-    "        return # Salida si gana\n",
-    "      break # Salida del bucle try... except"
+    "        return juego_nuevo() # Salida si gana y posibilidad de seguir jugando\n",
+    "      "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Juego completo"
+    "4. Juego completo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -229,24 +254,83 @@
       "    5.El objetivo del jugador adivinador es adivinar la palabra antes de que se dibuje el dibujo completo del muñeco ahorcado.\n",
       "      Tienes 6 intentos.\"\n",
       "                    ¿¿COMENZAMOS??\n",
-      "Jugador 2, la palabra que tienes que adivinar tiene 6 letras\n",
-      " _  _  _  _  _  _ \n",
+      "Jugador 2, la palabra que tienes que adivinar tiene 4 letras\n",
+      " _  _  _  _ \n",
       "Tienes 6 intentos\n",
       "Has acertado!\n",
-      "_ _ _ a _ _\n",
+      "c _ _ _\n",
       "Has acertado!\n",
-      "_ _ _ a _ e\n",
-      "No has introducido una letra del abecedario\n",
-      "No has introducido una letra del abecedario\n",
-      "No has introducido una letra del abecedario\n",
-      "No has introducido una letra del abecedario\n",
+      "c a _ a\n",
       "Has acertado!\n",
-      "t _ _ a t e\n",
+      "c a s a\n",
+      "ENHORABUENA! HAS GANADO :)\n",
+      "Jugador 2, la palabra que tienes que adivinar tiene 5 letras\n",
+      " _  _  _  _  _ \n",
+      "Tienes 6 intentos\n",
+      "Has fallado :(. Te quedan 6 intentos.\n",
+      "Tus intentos anteriores ['y']\n",
+      "\n",
+      "            ------\n",
+      "            |    |\n",
+      "            |    O\n",
+      "            |\n",
+      "            |\n",
+      "            |\n",
+      "          -------\n",
+      "Has fallado :(. Te quedan 5 intentos.\n",
+      "Tus intentos anteriores ['y', 't']\n",
+      "\n",
+      "            ------\n",
+      "            |    |\n",
+      "            |    O\n",
+      "            |    |\n",
+      "            |\n",
+      "            |\n",
+      "          -------\n",
       "Has acertado!\n",
-      "t _ m a t e\n",
-      "Has acertado!\n",
-      "t o m a t e\n",
-      "ENHORABUENA! HAS GANADO :)\n"
+      "_ _ p _ _\n",
+      "Has fallado :(. Te quedan 4 intentos.\n",
+      "Tus intentos anteriores ['y', 't', 'q']\n",
+      "\n",
+      "            ------\n",
+      "            |    |\n",
+      "            |    O\n",
+      "            |   /|\n",
+      "            |\n",
+      "            |\n",
+      "          -------\n",
+      "Has fallado :(. Te quedan 3 intentos.\n",
+      "Tus intentos anteriores ['y', 't', 'q', 'm']\n",
+      "\n",
+      "            ------\n",
+      "            |    |\n",
+      "            |    O\n",
+      "            |   /|\\\n",
+      "            |\n",
+      "            |\n",
+      "          -------\n",
+      "Has fallado :(. Te quedan 2 intentos.\n",
+      "Tus intentos anteriores ['y', 't', 'q', 'm', 'n']\n",
+      "\n",
+      "            ------\n",
+      "            |    |\n",
+      "            |    O\n",
+      "            |   /|\\\n",
+      "            |   /\n",
+      "            |\n",
+      "          -------\n",
+      "Has fallado :(. Te quedan 1 intentos.\n",
+      "Tus intentos anteriores ['y', 't', 'q', 'm', 'n', 'b']\n",
+      "\n",
+      "            ------\n",
+      "            |    |\n",
+      "            |    O\n",
+      "            |   /|\\\n",
+      "            |   / \\\n",
+      "            |\n",
+      "          -------\n",
+      "Has perdido :(. Ya no te quedan más intentos.\n",
+      "¡Gracias por jugar!\n"
      ]
     }
    ],
