--- a/ahorcado.ipynb
+++ b/ahorcado.ipynb
@@ -9,18 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bienvenida_juego():\n",
     "    saludo= ('¡¡Bienvenidas al juego del ahorcado!!').upper()\n",
     "    instrucciones= (\"\"\"Las reglas del juego son las siguientes:\n",
-    "    1.Un jugador elige una palabra secreta y dibuja un espacio para cada letra de la palabra.\"\n",
-    "    2.El otro jugador intenta adivinar letras para completar la palabra.\"\n",
-    "    3.Si el jugador adivinador adivina una letra correctamente, se revela en su lugar correspondiente.\n",
-    "    4.Si el jugador adivinador adivina incorrectamente, se dibuja una parte del cuerpo del ahorcado.\n",
-    "    5.El objetivo del jugador adivinador es adivinar la palabra antes de que se dibuje el dibujo completo del muñeco ahorcado.\n",
+    "    1.La jugadora 1 elige una palabra secreta y dibuja un espacio para cada letra de la palabra.\"\n",
+    "    2.La jugadora 2 intenta adivinar letras para completar la palabra.\"\n",
+    "    3.Si la jugadora 2 adivina una letra correctamente, se revela en su lugar correspondiente.\n",
+    "    4.Si la jugadora 2 no acierta la letra, se dibuja una parte del cuerpo del ahorcado.\n",
+    "    5.El objetivo de la jugadora 2 es adivinar la palabra antes de que se dibuje el dibujo completo del muñeco ahorcado.\n",
     "      Tienes 6 intentos.\"\n",
     "                    ¿¿COMENZAMOS??\"\"\")\n",
     "    print(saludo)\n",
@@ -72,17 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def desarrollo_juego():\n",
-    "  # Jugador 1\n",
+    "  # Jugadora 1\n",
     "  palabra_jugador1 = input(\"Jugador 1, ingresa una palabra: \").lower()\n",
     "  # Convertir letra en _\n",
     "  longitud = len(palabra_jugador1)\n",
     "  espacios = longitud * \" _ \"\n",
-    "  # Jugador 2\n",
+    "  # Jugadora 2\n",
     "  print(f\"Jugador 2, la palabra que tienes que adivinar tiene {longitud} letras\")\n",
     "  print(espacios)\n",
     "  print(\"Tienes 6 intentos\")\n",
