--- a/ahorcado.ipynb
+++ b/ahorcado.ipynb
@@ -78,12 +78,12 @@
    "source": [
     "def desarrollo_juego():\n",
     "  # Jugadora 1\n",
-    "  palabra_jugador1 = input(\"Jugador 1, ingresa una palabra: \").lower()\n",
+    "  palabra_jugador1 = input(\"Jugadora 1, ingresa una palabra: \").lower()\n",
     "  # Convertir letra en _\n",
     "  longitud = len(palabra_jugador1)\n",
     "  espacios = longitud * \" _ \"\n",
     "  # Jugadora 2\n",
-    "  print(f\"Jugador 2, la palabra que tienes que adivinar tiene {longitud} letras\")\n",
+    "  print(f\"Jugadora 2, la palabra que tienes que adivinar tiene {longitud} letras\")\n",
     "  print(espacios)\n",
     "  print(\"Tienes 6 intentos\")\n",
     "\n",
@@ -164,7 +164,7 @@
     "  while intentos > 0:\n",
     "    # Crear la condición de solo ingresar letras\n",
     "    while True:\n",
-    "      letras_jugador2 = input(\"Jugador 2, elige una letra: \").lower()\n",
+    "      letras_jugador2 = input(\"Jugadora 2, elige una letra: \").lower()\n",
     "      if letras_jugador2 not in abecedario:\n",
     "        print('No has introducido una letra del abecedario')\n",
     "        continue \n",
