--- a/ahorcado.ipynb
+++ b/ahorcado.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
     "  # Lista para guardar los errores y avisar si la letra ya se ha usado\n",
     "  lista_errores = []\n",
     "  # Contador para los fallos\n",
-    "  intentos = 7\n",
+    "  intentos = 6\n",
     "  dibujo = \"\"\"\n",
     "            ------\n",
     "            |    |\n",
@@ -161,7 +161,7 @@
     "  # Definir conversion_frase con un valor inicial\n",
     "  conversion_frase = \" \".join(conversion_espacio)\n",
     "\n",
-    "  while intentos > 0:\n",
+    "  while intentos >= 0:\n",
     "    # Crear la condición de solo ingresar letras\n",
     "    while True:\n",
     "      letras_jugador2 = input(\"Jugadora 2, elige una letra: \").lower()\n",
@@ -193,17 +193,17 @@
     "        print(f\"Has fallado :(. Te quedan {intentos} intentos.\")\n",
     "        print(f\"Tus intentos anteriores {lista_errores}\")\n",
     "        # Añadir dibujo a cada uno de los fallos\n",
-    "        if intentos == 6:\n",
+    "        if intentos == 5:\n",
     "            print(dibujo1)\n",
-    "        elif intentos == 5:\n",
-    "            print(dibujo2)\n",
     "        elif intentos == 4:\n",
-    "            print(dibujo3)\n",
+    "            print(dibujo2)\n",
     "        elif intentos == 3:\n",
-    "            print(dibujo4)\n",
+    "            print(dibujo3)\n",
     "        elif intentos == 2:\n",
-    "            print(dibujo5)\n",
+    "            print(dibujo4)\n",
     "        elif intentos == 1:\n",
+    "            print(dibujo5)\n",
+    "        elif intentos == 0:\n",
     "            print(dibujo6)\n",
     "            print(\"Has perdido :(. Ya no te quedan más intentos.\")\n",
     "            return juego_nuevo() # Salida si pierde y posibilidad de seguir jugando\n",
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -247,38 +247,53 @@
      "text": [
       "¡¡BIENVENIDAS AL JUEGO DEL AHORCADO!!\n",
       "Las reglas del juego son las siguientes:\n",
-      "    1.Un jugador elige una palabra secreta y dibuja un espacio para cada letra de la palabra.\"\n",
-      "    2.El otro jugador intenta adivinar letras para completar la palabra.\"\n",
-      "    3.Si el jugador adivinador adivina una letra correctamente, se revela en su lugar correspondiente.\n",
-      "    4.Si el jugador adivinador adivina incorrectamente, se dibuja una parte del cuerpo del ahorcado.\n",
-      "    5.El objetivo del jugador adivinador es adivinar la palabra antes de que se dibuje el dibujo completo del muñeco ahorcado.\n",
+      "    1.La jugadora 1 elige una palabra secreta y dibuja un espacio para cada letra de la palabra.\"\n",
+      "    2.La jugadora 2 intenta adivinar letras para completar la palabra.\"\n",
+      "    3.Si la jugadora 2 adivina una letra correctamente, se revela en su lugar correspondiente.\n",
+      "    4.Si la jugadora 2 no acierta la letra, se dibuja una parte del cuerpo del ahorcado.\n",
+      "    5.El objetivo de la jugadora 2 es adivinar la palabra antes de que se dibuje el dibujo completo del muñeco ahorcado.\n",
       "      Tienes 6 intentos.\"\n",
       "                    ¿¿COMENZAMOS??\n",
-      "Jugador 2, la palabra que tienes que adivinar tiene 4 letras\n",
+      "Jugadora 2, la palabra que tienes que adivinar tiene 4 letras\n",
       " _  _  _  _ \n",
       "Tienes 6 intentos\n",
       "Has acertado!\n",
-      "c _ _ _\n",
-      "Has acertado!\n",
-      "c a _ a\n",
-      "Has acertado!\n",
-      "c a s a\n",
-      "ENHORABUENA! HAS GANADO :)\n",
-      "Jugador 2, la palabra que tienes que adivinar tiene 5 letras\n",
-      " _  _  _  _  _ \n",
-      "Tienes 6 intentos\n",
-      "Has fallado :(. Te quedan 6 intentos.\n",
-      "Tus intentos anteriores ['y']\n",
-      "\n",
-      "            ------\n",
-      "            |    |\n",
-      "            |    O\n",
-      "            |\n",
-      "            |\n",
-      "            |\n",
-      "          -------\n",
+      "f _ _ _\n",
       "Has fallado :(. Te quedan 5 intentos.\n",
-      "Tus intentos anteriores ['y', 't']\n",
+      "Tus intentos anteriores ['t']\n",
+      "\n",
+      "            ------\n",
+      "            |    |\n",
+      "            |    O\n",
+      "            |\n",
+      "            |\n",
+      "            |\n",
+      "          -------\n",
+      "No has introducido una letra del abecedario\n",
+      "Ya lo has intentado con la letra: f\n",
+      "Ya lo has intentado con la letra: t\n",
+      "Has acertado!\n",
+      "f l _ _\n",
+      "Has acertado!\n",
+      "f l o _\n",
+      "Has acertado!\n",
+      "f l o r\n",
+      "ENHORABUENA! HAS GANADO :)\n",
+      "Jugadora 2, la palabra que tienes que adivinar tiene 4 letras\n",
+      " _  _  _  _ \n",
+      "Tienes 6 intentos\n",
+      "Has fallado :(. Te quedan 5 intentos.\n",
+      "Tus intentos anteriores ['q']\n",
+      "\n",
+      "            ------\n",
+      "            |    |\n",
+      "            |    O\n",
+      "            |\n",
+      "            |\n",
+      "            |\n",
+      "          -------\n",
+      "Has fallado :(. Te quedan 4 intentos.\n",
+      "Tus intentos anteriores ['q', 's']\n",
       "\n",
       "            ------\n",
       "            |    |\n",
@@ -287,10 +302,8 @@
       "            |\n",
       "            |\n",
       "          -------\n",
-      "Has acertado!\n",
-      "_ _ p _ _\n",
-      "Has fallado :(. Te quedan 4 intentos.\n",
-      "Tus intentos anteriores ['y', 't', 'q']\n",
+      "Has fallado :(. Te quedan 3 intentos.\n",
+      "Tus intentos anteriores ['q', 's', 'm']\n",
       "\n",
       "            ------\n",
       "            |    |\n",
@@ -299,8 +312,8 @@
       "            |\n",
       "            |\n",
       "          -------\n",
-      "Has fallado :(. Te quedan 3 intentos.\n",
-      "Tus intentos anteriores ['y', 't', 'q', 'm']\n",
+      "Has fallado :(. Te quedan 2 intentos.\n",
+      "Tus intentos anteriores ['q', 's', 'm', 'x']\n",
       "\n",
       "            ------\n",
       "            |    |\n",
@@ -309,8 +322,8 @@
       "            |\n",
       "            |\n",
       "          -------\n",
-      "Has fallado :(. Te quedan 2 intentos.\n",
-      "Tus intentos anteriores ['y', 't', 'q', 'm', 'n']\n",
+      "Has fallado :(. Te quedan 1 intentos.\n",
+      "Tus intentos anteriores ['q', 's', 'm', 'x', 'z']\n",
       "\n",
       "            ------\n",
       "            |    |\n",
@@ -319,8 +332,8 @@
       "            |   /\n",
       "            |\n",
       "          -------\n",
-      "Has fallado :(. Te quedan 1 intentos.\n",
-      "Tus intentos anteriores ['y', 't', 'q', 'm', 'n', 'b']\n",
+      "Has fallado :(. Te quedan 0 intentos.\n",
+      "Tus intentos anteriores ['q', 's', 'm', 'x', 'z', 'd']\n",
       "\n",
       "            ------\n",
       "            |    |\n",
@@ -355,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
